--- a/BE/settings/setting files/settings.json
+++ b/BE/settings/setting files/settings.json
@@ -412,7 +412,7 @@
             "order": 5,
             "name": "동동주 마시기 - 2회",
             "created_at": "2024-11-30T07:08:49.271692",
-            "updated_at": "2024-12-21T10:58:33.051482",
+            "updated_at": "2024-12-21T12:56:32.402494",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -487,8 +487,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0159초",
-                    "duration": 0.0159,
+                    "display_text": "지연시간 : 1.0000초",
+                    "duration": 1.0,
                     "order": 9
                 },
                 {
@@ -496,9 +496,9 @@
                     "display_text": "키 입력: 왼쪽 컨트롤 --- 떼기",
                     "action": "떼기",
                     "type": "key_input",
-                    "key_code": "F",
-                    "scan_code": 33,
-                    "virtual_key": 70,
+                    "key_code": "왼쪽 컨트롤",
+                    "scan_code": 29,
+                    "virtual_key": 162,
                     "modifiers": 0
                 },
                 {
@@ -1035,15 +1035,15 @@
             "order": 10,
             "name": "((1초)) 탭탭 체력회복 - 4회",
             "created_at": "2024-11-26T06:51:44.957381",
-            "updated_at": "2024-12-21T11:04:04.336015",
+            "updated_at": "2024-12-21T12:22:58.142985",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
             "items": [
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0337초",
-                    "duration": 0.0337,
+                    "display_text": "지연시간 : 0.0243초",
+                    "duration": 0.0243,
                     "order": 1
                 },
                 {
@@ -1056,8 +1056,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0337초",
-                    "duration": 0.0337,
+                    "display_text": "지연시간 : 0.0243초",
+                    "duration": 0.0243,
                     "order": 3
                 },
                 {
@@ -1082,8 +1082,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0337초",
-                    "duration": 0.0337,
+                    "display_text": "지연시간 : 0.0243초",
+                    "duration": 0.0243,
                     "order": 6
                 },
                 {
@@ -1108,8 +1108,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0337초",
-                    "duration": 0.0337,
+                    "display_text": "지연시간 : 0.0243초",
+                    "duration": 0.0243,
                     "order": 9
                 },
                 {
@@ -1134,8 +1134,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0337초",
-                    "duration": 0.0337,
+                    "display_text": "지연시간 : 0.0243초",
+                    "duration": 0.0243,
                     "order": 12
                 },
                 {
@@ -1160,8 +1160,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0337초",
-                    "duration": 0.0337,
+                    "display_text": "지연시간 : 0.0243초",
+                    "duration": 0.0243,
                     "order": 15
                 },
                 {
@@ -1174,8 +1174,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0337초",
-                    "duration": 0.0337,
+                    "display_text": "지연시간 : 0.0243초",
+                    "duration": 0.0243,
                     "order": 17
                 }
             ]
@@ -4783,7 +4783,7 @@
             "order": 38,
             "name": "((1초)) 상하좌우 - 마비",
             "created_at": "2024-12-09T13:56:02.913186",
-            "updated_at": "2024-12-20T07:00:33.765554",
+            "updated_at": "2024-12-21T11:16:22.532017",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
